Fix list item spacing
Fixes #305

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -197,6 +197,11 @@ $colors: mergeColorMaps(("secondary": ($secondary, $white), "twitter-blue": ($tw
   .highlight
     margin-bottom: 1rem
 
+  li >
+    p:last-child:not(:only-child),
+    ul:last-child:not(:only-child)
+      margin-bottom: 1em
+
   p a
     font-weight: $weight-medium
 
